# vtkspa

./: .gitignore  BiRefNet-Qwen1.json  README.md  pyproject.toml
examples/: README.md  generate_example_assets.py  roster.csv
examples/template/: template.json
tests/: conftest.py  test_batch.py  test_gui.py  test_photo.py  test_psd_importer.py  test_roster.py  test_schema.py  test_text.py
vtkspa/: __init__.py  batch.py  cli.py  gui.py  gui_helpers.py  models.py
vtkspa/data/: __init__.py  roster.py
vtkspa/render/: __init__.py  engine.py  photo.py  text.py
vtkspa/template/: __init__.py  psd_importer.py  schema.py
