[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "vtkspa"
version = "0.1.0"
description = "Photoshop-free Sports Photo Automation tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0",
    "psd-tools>=1.9",
]

[project.scripts]
vtkspa = "vtkspa.cli:main"

[project.gui-scripts]
vtkspa-gui = "vtkspa.gui:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
